# admin-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml
admin-app/: Cargo.toml
admin-testing/: Cargo.toml
app/: Cargo.toml
app/src/: main.rs
crates/configuration/: Cargo.toml
crates/configuration/src/: db.rs  lib.rs
crates/core/src/: deploy.rs
crates/entity/: Cargo.toml
crates/entity/src/model/: announce.rs  atlas_schema_revisions.rs  banner.rs  banner_kind.rs  dict.rs  dict_item.rs  guide.rs  log_login.rs  mod.rs  prelude.rs  question.rs  sys_api.rs  sys_api_group.rs  sys_config.rs  sys_log_login.rs  sys_menu.rs  sys_menu_api.rs  sys_org.rs  sys_perm.rs  sys_post.rs  sys_resource.rs  sys_resource_api.rs  sys_role.rs  sys_role_user.rs  sys_user.rs  sys_user_org.rs  sys_user_post.rs
crates/handler/: Cargo.toml
crates/handler/src/: lib.rs  misc.rs  swagger.rs
crates/handler/src/misc/: mod.rs
crates/types/: Cargo.toml
crates/types/src/: error.rs
crates/utils/: Cargo.toml
crates/utils/src/: deploy.rs
testing/: Cargo.toml
