[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

# [[bin]]
# name = "admin"
# path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
utoipa-swagger-ui.workspace = true
utoipa.workspace = true

anyhow.workspace = true

configuration = {path = "../crates/configuration"}
handler = {path = "../crates/handler"}

[lints]
workspace = true
