[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

# [[bin]]
# name = "admin"
# path = "src/main.rs"

[dependencies]
configuration = {path = "../crates/configuration"}
handler = {path = "../crates/handler"}

tokio.workspace = true
axum.workspace = true
anyhow.workspace = true

# openapi
utoipa-swagger-ui.workspace = true
utoipa.workspace = true

# tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-actix-web.workspace = true

[lints]
workspace = true
